feat-events: click, change  as handling events

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,9 +19,14 @@
       <div
       class="todo"
       [class.completed]="todo.completed"
-      *ngFor="let todo of todos">
+      *ngFor="let todo of todos; let i  = index">
         <label class="todo__status-label">
-          <input type="checkbox" class="todo__status" checked />
+          <input
+          type="checkbox"
+          class="todo__status"
+          [checked]="todo.completed"
+          (change)="handleTodoToggle($event, todo)"
+          />
         </label>
 
         <form *ngIf="editing; else titleBlock">
@@ -33,7 +38,7 @@
           <span class="todo__title">{{ todo.title }}</span>
 
           <!-- Remove button appears only on hover -->
-          <button class="todo__remove">x</button>
+          <button class="todo__remove" (click)="todos.splice(i, 1)">x</button>
         </ng-template>
 
         <div class="modal overlay" [class.is-active]="false">
