--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div class="todoapp">
   <h1 class="todoapp__title">todos</h1>
 
-  {{ title.errors | json }}
-
   <div class="todoapp__content">
 
     <header class="todoapp__header">
@@ -21,34 +19,11 @@
 
     <section class="todoapp__main">
 
-      <div
-      class="todo"
-      [class.completed]="todo.completed"
-      *ngFor="let todo of todos; let i  = index">
-        <label class="todo__status-label">
-          <input
-          type="checkbox"
-          class="todo__status"
-          [(ngModel)]="todo.completed"
-          />
-        </label>
+      <app-todo
+      *ngFor="let todo of todos; let i  = index"
+      [todo]="todo"
+      ></app-todo>
 
-        <form *ngIf="editing; else titleBlock">
-          <input type="text" class="todo__title-field" placeholder="Empty todo will be deleted"
-            value="Todo is being edited now" />
-        </form>
-
-        <ng-template #titleBlock>
-          <span class="todo__title">{{ todo.title }}</span>
-
-          <button class="todo__remove" (click)="todos.splice(i, 1)">x</button>
-        </ng-template>
-
-        <div class="modal overlay" [class.is-active]="false">
-          <div class="modal-background has-background-white-ter"></div>
-          <div class="loader"></div>
-        </div>
-      </div>
     </section>
 
     <footer class="todoapp__footer">
