--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -11,20 +11,34 @@
         </label>
 
         <form *ngIf="editing; else titleBlock">
-          <input type="text" class="todo__title-field" placeholder="Empty todo will be deleted"
-            value="Todo is being edited now" />
+          <input
+          #titleField
+          type="text"
+          class="todo__title-field"
+          placeholder="Empty todo will be deleted"
+          name="title"
+          [(ngModel)]="todo.title"
+          (keyup.escape)="editing = false"
+          />
         </form>
 
         <ng-template #titleBlock>
-          <span class="todo__title">{{ todo.title }}</span>
+          <span class="todo__title" (dblclick)="editing = true">
+            {{ todo.title }}
+          </span>
 
           <button
           class="todo__remove"
           (click)="delete.emit()"
-          >x</button>
+          >
+          x
+        </button>
+
         </ng-template>
 
-        <div class="modal overlay" [class.is-active]="false">
+        <div
+        class="modal overlay"
+        [class.is-active]="false">
           <div class="modal-background has-background-white-ter"></div>
           <div class="loader"></div>
         </div>
