feat-custom-pipe: activeFilter Pipe, updated setter & getter

--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -29,7 +29,7 @@
 
         <ng-template #titleBlock>
           <span class="todo__title" (dblclick)="edit()">
-            {{ todo.title }}
+            {{ todo.title | lowercase | slice:0:3 }}
           </span>
 
           <button
