feat-params: params routing

--- a/src/app/pages/todos-pages/todos-page.component.html
+++ b/src/app/pages/todos-pages/todos-page.component.html
@@ -23,7 +23,7 @@
           {{ activeCount$ | async }} items left
         </span>
   
-        <!-- <app-filter></app-filter> -->
+        <app-filter></app-filter>
   
         <button class="todoapp__clear-completed">
           Clear completed
