feat-clearall: clear all functionality

--- a/src/app/pages/todos-pages/todos-page.component.html
+++ b/src/app/pages/todos-pages/todos-page.component.html
@@ -29,8 +29,8 @@
   
         <app-filter></app-filter>
   
-        <button class="todoapp__clear-completed">
-          Clear completed
+        <button class="todoapp__clear-completed" (click)="clearAllTodos()">
+          Clear All
         </button>
       </footer>
     </div>
